k8s/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: default
spec:
  headers:
    accessControlAllowCredentials: true
    accessControlAllowOriginList:
      - "http://localhost:3000"
      - "https://mtg-tracker.local"
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "OPTIONS"
    accessControlAllowHeaders:
      - "DNT"
      - "X-CustomHeader"
      - "Keep-Alive"
      - "User-Agent"
      - "X-Requested-With"
      - "If-Modified-Since"
      - "Cache-Control"
      - "Content-Type"
      - "Authorization"
    accessControlMaxAge: 100
