k8s/collection-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collection-depl
  annotations:
    argocd-image-updater.argoproj.io/image-list: collection=zhamburglar/mtg-tracker-collection
    argocd-image-updater.argoproj.io/auth.update-strategy: latest
    argocd-image-updater.argoproj.io/write-back-method: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collection
  template:
    metadata:
      labels:
        app: collection
    spec:
      containers:
        - name: collection
          image: zhamburglar/mtg-tracker-collection:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: collection-srv
spec:
  selector:
    app: collection
  ports:
    - name: collection
      protocol: TCP
      port: 3000
      targetPort: 3000
