k8s/listing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listing-depl
  annotations:
    argocd-image-updater.argoproj.io/image-list: listing=zhamburglar/mtg-tracker-listing
    argocd-image-updater.argoproj.io/auth.update-strategy: latest
    argocd-image-updater.argoproj.io/write-back-method: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listing
  template:
    metadata:
      labels:
        app: listing
    spec:
      containers:
        - name: listing
          image: zhamburglar/mtg-tracker-listing:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: listing-srv
spec:
  selector:
    app: listing
  ports:
    - name: listing
      protocol: TCP
      port: 3000
      targetPort: 3000
