k8s/search-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-depl
  annotations:
    argocd-image-updater.argoproj.io/image-list: search=zhamburglar/mtg-tracker-search
    argocd-image-updater.argoproj.io/auth.update-strategy: latest
    argocd-image-updater.argoproj.io/write-back-method: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: zhamburglar/mtg-tracker-search:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: search-srv
spec:
  selector:
    app: search
  ports:
    - name: search
      protocol: TCP
      port: 3000
      targetPort: 3000
